manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-k8s-service
spec:
  selector:
    app: simple-k8s-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: default
  type: NodePort
