manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: simple-k8s-service
            servicePort: 8000
        - path: /otusapp/abslord/(.*)
          backend:
            serviceName: simple-k8s-service
            servicePort: 8000
